fix unreadable autocomplete
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40253

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -614,6 +614,7 @@ div.auto_complete ul {
 div.auto_complete ul > li {
   margin:0;
   padding:3px;
+  color: #000000;
 }
 
 div.auto_complete ul > li.selected { 
